Fixed row scrolling to show row labels and fixed #117 media title being truncated

--- a/packages/app/src/views/Browse/Browse.module.less
+++ b/packages/app/src/views/Browse/Browse.module.less
@@ -353,6 +353,7 @@
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	line-height: 1.3;
 }
 
 .detailInfoRow {
@@ -391,7 +392,7 @@
 	-webkit-line-clamp: 3;
 	-webkit-box-orient: vertical;
 	overflow: hidden;
-	max-width: 1500px;
+	max-width: 1800px;
 }
 
 /* Content Rows */
